modify - opacity 0 to 1

--- a/src/bienna.scss
+++ b/src/bienna.scss
@@ -19,7 +19,7 @@
   transition: background 0.2s ease-in-out;
   background-color: rgba(0,0,0,0);
   &__wrap {
-    opacity: 0;
+    // opacity: 0;
     width: 77.3%;
     background-color: #fff;
     font-weight: 500;
